add constant file

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-JWT_KEY = "secrete"
+JWT_KEY = "secret"
+DB_URL="postgresql://postgres:root@localhost:5432/expenceManager"
+AUTH="906ea7a43c574d"
+PASS="a857441f858e5d"
