--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "sails-hook-req-validate": "^2.8.4",
     "sails-hook-sockets": "^2.0.0",
     "sails-hook-validation-ev": "^0.0.2",
-    "sails-mongo": "^2.0.0"
+    "sails-mongo": "^2.0.0",
+    "sails-postgresql": "^5.0.1",
+    "uuid-random": "^1.3.2",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "eslint": "5.16.0"
